radix-transactions/tests/assets/manifest_generator_error_argument_could_not_be_read_as_expected_type_1.diag
error: an argument's structure does not fit with the radix_common::data::manifest::model::manifest_resource_assertion::ManifestResourceConstraints type. [ERROR] byte offset: 36-38, value path: ManifestResourceConstraints.[0].Value->ManifestResourceConstraint::{8}, cause: { unknown_variant_id: 8 }
  |
1 | ASSERT_WORKTOP_RESOURCES_INCLUDE
2 |     Map<Address, Enum>(
  |     ^^^ cannot be decoded as a radix_common::data::manifest::model::manifest_resource_assertion::ManifestResourceConstraints
3 |         Address("resource_sim1thqu8jcc3zh8ukuh0rwtllr84dgrd3z8j9zjdelkx3zf4kjasgvnm8") => Enum<8u8>(
4 |             Decimal("10")
5 |         )
6 |     )
7 | ;
  |