radix-transactions/tests/assets/manifest_generator_error_argument_could_not_be_read_as_expected_type_1.rtm
ASSERT_WORKTOP_RESOURCES_INCLUDE
    Map<Address, Enum>(
        Address("resource_sim1thqu8jcc3zh8ukuh0rwtllr84dgrd3z8j9zjdelkx3zf4kjasgvnm8") => Enum<8u8>(
            Decimal("10")
        )
    )
;